--- a/adventofcode/pom.xml
+++ b/adventofcode/pom.xml
@@ -5,6 +5,13 @@
   <version>0.0.1-SNAPSHOT</version>
   <name>Advent of Code 2021</name>
   <description>More Advent of Code Solutions</description>
+  
+  <properties>
+      <jdk.version>14</jdk.version>
+      <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+      <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+  </properties>
+    
   <dependencies>
   	<dependency>
   		<groupId>one.util</groupId>
@@ -12,4 +19,27 @@
   		<version>0.8.0</version>
   	</dependency>
   </dependencies>
+  
+  
+    <build>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-compiler-plugin</artifactId>
+                    <version>3.8.0</version>
+                    <configuration>
+                        <source>${jdk.version}</source>
+                        <target>${jdk.version}</target>
+                        <encoding>${project.build.sourceEncoding}</encoding>
+                    </configuration>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-surefire-plugin</artifactId>
+                    <version>2.22.0</version>
+                </plugin>
+            </plugins>
+        </pluginManagement>
+    </build>
 </project>
